Environment/k3d/k8s/Monitoring/Grafana/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: system-monitoring-grafana
  labels:
    system: Monitoring
    monitoring: Grafana
