Environment/k3d/k8s/Monitoring/Grafana/grafana.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    system: Monitoring
    monitoring: Grafana
    component: Grafana
  name: grafana
  namespace: system-monitoring-grafana
spec:
  selector:
    system: Monitoring
    monitoring: Grafana
    component: Grafana
  ports:
    - name: http
      port: 80
      targetPort: http-metrics

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    system: Monitoring
    monitoring: Grafana
    component: Grafana
  name: grafana
  namespace: system-monitoring-grafana
spec:
  selector:
    matchLabels:
      system: Monitoring
      monitoring: Grafana
      component: Grafana
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        system: Monitoring
        monitoring: Grafana
        component: Grafana
    spec:
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - distributor
      containers:
        - name: grafana
          image: grafana/grafana:7.5.5
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
            - name: config
              mountPath: /etc/grafana/provisioning/datasources/datasource.yml
              subPath: datasource.yml
          ports:
            - name: http-metrics
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /robots.txt
              port: http-metrics
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 2
          livenessProbe:
            tcpSocket:
              port: http-metrics
            initialDelaySeconds: 30
          resources:
            limits:
              cpu: 500m
              memory: 1500Mi
            requests:
              cpu: 250m
              memory: 750Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 472
        runAsGroup: 472
        fsGroup: 472
      volumes:
        - name: config
          configMap:
            name: grafana
